# BoT-Python-SDK

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.py  public.pem  pyproject.toml  requirements.txt  server.py  setup.py  showqr.py
bot_python_sdk/: ActionTriggerHandler.py  ActivationResource.py  PairingResource.py  Utils.py  action_resource.py  action_service.py  actions_resource.py  activate_device_resource.py  activate_device_service.py  activation_resource.py  activation_service.py  api.py  base_resource.py  bluetooth-service.py  bluetooth_service.py  bot_api_service.py  bot_server_error.py  bot_service.py  configuration.py  configuration_service.py  configuration_store.py  device_status.py  finn.py  frequency.py  key_generator.py  logger.py  pairing_resource.py  pairing_service.py  polling_service.py  qr_code_resource.py  store.py  trigger.py
bot_python_sdk/bleno/: bleno-service.py  bleno_service.py  configure.py  configure_characteristic.py  device.py  device_characteristic.py  device_info.py  device_info_characteristic.py  device_network.py  device_network_characteristic.py
bot_python_sdk/data/: configuration.py  (+4 more)
botiotsdk/: __init__.py  config.py
example/: example.py  example.sh
examples/: bot_api_access_example.py  bot_example_offline_mode.py  bot_trigger_example.py  example.py  example.sh
storage/: public.pem
tests/: test_action_service.py  test_bot_service.py  test_configuration.py  test_device_status.py  test_finn.py  test_key_generator.py  test_storage.py  test_store.py
(+15 files in other folders)
