[metadata]
name = 'BoT-Python-SDK'
version = '0.0.1'
description = ''
author = 'Coen Mooij'
author_email = 'coenmooij@gmail.com'
url = 'https://github.com/BankingofThings/BoT-Python-SDK'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
