[metadata]
name = 'BoT-Python-SDK'
version = '0.0.1'
description = ''
author = 'Banking of Things'
author_email = 'bankingofthings@ing.nl'
url = 'https://github.com/BankingofThings/BoT-Python-SDK'

[requires]
python_version = ['3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
